--- a/practice.html
+++ b/practice.html
@@ -3,125 +3,231 @@
 <head>
   <meta charset="UTF-8" />
   <title>テーブル管理</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getFirestore, collection, query, orderBy, onSnapshot, addDoc, setDoc, doc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      position: relative;
+    }
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+    .drawer.open {
+      left: 0;
+    }
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+    h1 {
+      text-align: center;
+    }
+    .table-list {
+      margin-top: 30px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-bottom: 40px;
+    }
+    th, td {
+      border: 1px solid #aaa;
+      padding: 10px;
+      text-align: center;
+    }
+    th {
+      background-color: #00796b;
+      color: white;
+    }
+    .occupied {
+      background-color: #ffccbc;
+    }
+    .vacant {
+      background-color: #c8e6c9;
+    }
+  </style>
+</head>
+<body>
+<header>
+  <div class="menu-button">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="header-bar">
+    <div class="header-title">　　　　　店内管理システム</div>
+    <div class="header-links">
+      <a href="index.html">ログアウト</a>
+    </div>
+  </div>
+  <div class="drawer">
+    <a href="dashboard.html">ホーム</a>
+    <a href="table.html">テーブル管理</a>
+    <a href="histogram.html">混雑状況可視化</a>
+    <a href="admin.html">順番待ち管理</a>
+    <a href="/QR/qrcode.html">QRコード一覧</a>
+    <a href="generate.html">QRコード生成</a>
+  </div>
+</header>
+<main>
+  <h1>テーブル管理画面</h1>
+  <div class="table-list">
+    <h2>テーブル一覧</h2>
+    <table id="tableStatusTable">
+      <thead>
+        <tr>
+          <th>テーブルID</th>
+          <th>状態</th>
+          <th>使用開始時刻</th>
+          <th>利用時間（分）</th>
+          <th>強制退出</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</main>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const tableStatus = {};
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    let tableStatus = {};
-
-    window.forceExit = async function(tableId, deviceId) {
-      const confirmExit = confirm(`テーブル ${tableId} を強制退店させますか？`);
-      if (!confirmExit) return;
-
-      await addDoc(collection(db, "logs"), {
-        table: tableId,
-        type: "exit",
-        timestamp: new Date().toISOString(),
-        device: deviceId || "force-exit"
-      });
-
-      if (deviceId) {
-        await setDoc(doc(db, "force_exit_flags", deviceId), {
-          table: tableId,
-          redirect: true,
-          timestamp: new Date().toISOString()
-        });
-      }
-
-      alert(`テーブル ${tableId} の強制退出処理を完了しました`);
-    };
-
-    onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        const tableId = data.table;
-        const deviceId = data.device;
-        const timestamp = new Date(data.timestamp);
+  function renderTableList() {
+    db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+      const now = new Date();
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const id = data.table;
+        const time = new Date(data.timestamp);
         const type = data.type;
-
-        if (!tableStatus[tableId]) {
-          tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-        }
-
+        if (!tableStatus[id]) tableStatus[id] = { status: "vacant", startTime: null, deviceId: null };
         if (type === "enter") {
-          tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
+          tableStatus[id] = { status: "occupied", startTime: time, deviceId: data.device };
         } else if (type === "exit") {
-          tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+          tableStatus[id] = { status: "vacant", startTime: null, deviceId: null };
         }
       });
 
       const tbody = document.querySelector("#tableStatusTable tbody");
       tbody.innerHTML = "";
-
-      for (const [tableId, info] of Object.entries(tableStatus)) {
+      for (const [id, status] of Object.entries(tableStatus)) {
         const tr = document.createElement("tr");
-        tr.dataset.tableId = tableId;
-        tr.className = info.status === "occupied" ? "occupied" : "vacant";
-
-        const duration = info.status === "occupied" && info.startTime
-          ? Math.floor((new Date() - info.startTime) / 60000)
-          : "-";
-
+        tr.className = status.status === "occupied" ? "occupied" : "vacant";
+        const duration = status.startTime ? Math.floor((Date.now() - status.startTime.getTime()) / 60000) : "-";
         tr.innerHTML = `
-          <td>${tableId}</td>
-          <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
-          <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
-          <td class="usage-time">${duration}</td>
-          <td>${info.status === "occupied" ? `<button onclick="forceExit('${tableId}', '${info.deviceId}')">強制退出</button>` : "-"}</td>
+          <td>${id}</td>
+          <td>${status.status === "occupied" ? "使用中" : "空席"}</td>
+          <td>${status.startTime ? status.startTime.toLocaleString() : "-"}</td>
+          <td>${duration}</td>
+          <td>
+            ${status.status === "occupied" ? `<button onclick="forceExit('${id}', '${status.deviceId}')">強制退出</button>` : "-"}
+          </td>
         `;
         tbody.appendChild(tr);
       }
     });
+  }
 
-    setInterval(() => {
-      const now = new Date();
-      for (const [tableId, info] of Object.entries(tableStatus)) {
-        if (info.status === "occupied" && info.startTime) {
-          const duration = Math.floor((now - info.startTime) / 60000);
-          const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
-          if (row) {
-            row.querySelector(".usage-time").textContent = duration;
-          }
-        }
-      }
-    }, 60000);
-  </script>
-  <style>
-    body { font-family: sans-serif; background: #f0f8ff; padding: 20px; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 10px; text-align: center; }
-    th { background: #00796b; color: white; }
-    .occupied { background: #ffdddd; }
-    .vacant { background: #ddffdd; }
-    button { padding: 6px 12px; background: #e74c3c; color: white; border: none; border-radius: 5px; cursor: pointer; }
-  </style>
-</head>
-<body>
-  <h1>テーブル管理</h1>
-  <table id="tableStatusTable">
-    <thead>
-      <tr>
-        <th>テーブルID</th>
-        <th>状態</th>
-        <th>使用開始時刻</th>
-        <th>利用時間（分）</th>
-        <th>強制退出</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  async function forceExit(tableId, deviceId) {
+    const timestamp = new Date().toISOString();
+    await db.collection("logs").add({
+      table: tableId,
+      device: deviceId,
+      type: "exit",
+      timestamp
+    });
+    await db.collection("force_exit_flags").doc(deviceId).set({
+      table: tableId,
+      timestamp,
+      force: true
+    });
+    alert(`テーブル ${tableId} を強制退出させました。`);
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    renderTableList();
+    document.querySelector(".menu-button").addEventListener("click", () => {
+      document.querySelector(".drawer").classList.toggle("open");
+    });
+  });
+</script>
 </body>
 </html>
