--- a/practice.html
+++ b/practice.html
@@ -2,10 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>テーブル管理</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>QRコード生成と印刷</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+
+  
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -15,33 +19,57 @@
       color: #2c3e50;
       overflow-x: hidden;
     }
+
     header {
       background-color: #2c3e50;
       color: white;
       position: relative;
+      margin-bottom: 0;
+      padding-bottom: 0; 
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
+
     .header-links {
       display: flex;
       gap: 20px;
     }
+
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
+
     .header-links a:hover {
       text-decoration: underline;
     }
+
+    .full-width-section {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+
+  background: #e0f7da;
+  padding: 60px 0;
+  text-align: center;
+  margin-top: 0 !important; 
+}
+
+    /* ハンバーガーメニュー */
     .menu-button {
       position: absolute;
       left: 20px;
@@ -51,6 +79,7 @@
       cursor: pointer;
       z-index: 1001;
     }
+
     .menu-button span {
       display: block;
       height: 4px;
@@ -58,6 +87,7 @@
       margin: 5px 0;
       transition: 0.4s;
     }
+
     .drawer {
       position: fixed;
       top: 0;
@@ -70,9 +100,11 @@
       z-index: 1000;
       padding-top: 60px;
     }
+
     .drawer.open {
       left: 0;
     }
+
     .drawer a {
       display: block;
       padding: 15px 20px;
@@ -81,154 +113,157 @@
       font-weight: bold;
       border-bottom: 1px solid #2c3e50;
     }
+
     .drawer a:hover {
       background-color: #2c3e50;
     }
+
     main {
-      max-width: 1200px;
+      max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
     }
-    h1 {
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
+    #printArea {
+      width: 58mm;
       text-align: center;
+      font-family: sans-serif;
+      margin: auto;
+      padding: 5mm;
+      border: 1px dashed #ccc;
     }
-    .table-list {
-      margin-top: 30px;
-    }
-    table {
-      border-collapse: collapse;
+    #printArea canvas {
       width: 100%;
-      margin-bottom: 40px;
+      height: auto;
     }
-    th, td {
-      border: 1px solid #aaa;
-      padding: 10px;
-      text-align: center;
-    }
-    th {
-      background-color: #00796b;
-      color: white;
-    }
-    .occupied {
-      background-color: #ffccbc;
-    }
-    .vacant {
-      background-color: #c8e6c9;
-    }
+
+    @media print {
+      body * {
+        visibility: hidden;
+      }
+      #printArea, #printArea * {
+        visibility: visible;
+      }
+
+
   </style>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    function updateTableDisplays() {
+   }
+
+    function countVisitors(snapshot) {
+      updateTableDisplays();
+    }
+        async function generateQR() {
+      const table = document.getElementById("tableNum").value;
+      if (!table || isNaN(table)) {
+        alert("テーブル番号を入力してください");
+        return;
+      }
+
+      const token = crypto.randomUUID();
+      const expiresAt = new Date(Date.now() + 2 * 60 * 1000); // 2分後
+
+      await db.collection("qr_tokens").doc(token).set({
+        table: table,
+        token: token,
+        expiresAt: expiresAt.toISOString(),
+        used: false
+      });
+
+      const url = https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token};
+      document.getElementById("tableLabel").textContent = テーブル番号：${table};
+      QRCode.toCanvas(document.getElementById("qrcode"), url, function (error) {
+        if (error) {
+          console.error(error);
+          alert("QRコード生成に失敗しました");
+        }
+      });
+    }
+
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
+  </script>
 </head>
 <body>
-<header>
-  <div class="menu-button">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <div class="header-bar">
-    <div class="header-title">　　　　　店内管理システム</div>
-    <div class="header-links">
-      <a href="index.html">ログアウト</a>
+
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-  </div>
-  <div class="drawer">
-    <a href="dashboard.html">ホーム</a>
-    <a href="table.html">テーブル管理</a>
-    <a href="histogram.html">混雑状況可視化</a>
-    <a href="admin.html">順番待ち管理</a>
-    <a href="/QR/qrcode.html">QRコード一覧</a>
-    <a href="generate.html">QRコード生成</a>
-  </div>
-</header>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="index.html">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="dashboard.html">ホーム</a>
+      <a href="table.html">テーブル管理</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">順番待ち管理</a>
+      <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="generate.html">QRコード生成</a>
+
+
+    </div>
+  </header>
+
 <main>
-  <h1>テーブル管理画面</h1>
-  <div class="table-list">
-    <h2>テーブル一覧</h2>
-    <table id="tableStatusTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>状態</th>
-          <th>使用開始時刻</th>
-          <th>利用時間（分）</th>
-          <th>強制退出</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+  <h2>QRコード生成（ワンタイム）</h2>
+  <label>テーブル番号:
+    <select id="tableNum">
+      <option value="">選択してください</option>
+      <option value="1">テーブル 1</option>
+      <option value="2">テーブル 2</option>
+      <option value="3">テーブル 3</option>
+      <option value="4">テーブル 4</option>
+      <option value="5">テーブル 5</option>
+      <option value="6">テーブル 6</option>
+      <option value="7">テーブル 7</option>
+      <option value="8">テーブル 8</option>
+      <option value="9">テーブル 9</option>
+    </select>
+  </label>
+  <button onclick="generateQR()">生成</button>
+  <button onclick="window.print()">印刷する</button>
+
+  <div id="printArea">
+    <p id="tableLabel">テーブル番号：</p>
+    <canvas id="qrcode"></canvas>
   </div>
 </main>
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-  import { getFirestore, collection, query, orderBy, onSnapshot, addDoc, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-  const tableStatus = {};
 
-  onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      const id = data.table;
-      const time = new Date(data.timestamp);
-      const type = data.type;
-      if (!tableStatus[id]) tableStatus[id] = { status: "vacant", startTime: null, deviceId: null };
-      if (type === "enter") {
-        tableStatus[id] = { status: "occupied", startTime: time, deviceId: data.device };
-      } else if (type === "exit") {
-        tableStatus[id] = { status: "vacant", startTime: null, deviceId: null };
-      }
-    });
-
-    const tbody = document.querySelector("#tableStatusTable tbody");
-    tbody.innerHTML = "";
-    for (const [id, status] of Object.entries(tableStatus)) {
-      const tr = document.createElement("tr");
-      tr.className = status.status === "occupied" ? "occupied" : "vacant";
-      const duration = status.startTime ? Math.floor((Date.now() - status.startTime.getTime()) / 60000) : "-";
-      tr.innerHTML = `
-        <td>${id}</td>
-        <td>${status.status === "occupied" ? "使用中" : "空席"}</td>
-        <td>${status.startTime ? status.startTime.toLocaleString() : "-"}</td>
-        <td>${duration}</td>
-        <td>
-          ${status.status === "occupied" ? `<button onclick="forceExit('${id}', '${status.deviceId}')">強制退出</button>` : "-"}
-        </td>
-      `;
-      tbody.appendChild(tr);
-    }
-  });
-
-  async function forceExit(tableId, deviceId) {
-    const timestamp = new Date().toISOString();
-    await addDoc(collection(db, "logs"), {
-      table: tableId,
-      device: deviceId,
-      type: "exit",
-      timestamp
-    });
-    await setDoc(doc(db, "force_exit_flags", deviceId), {
-      table: tableId,
-      timestamp,
-      force: true
-    });
-    alert(`テーブル ${tableId} を強制退出させました。`);
-  }
-
-  window.onload = () => {
-    const menuButton = document.querySelector(".menu-button");
-    const drawer = document.querySelector(".drawer");
-    menuButton.addEventListener("click", () => {
-      drawer.classList.toggle("open");
-    });
-  };
-</script>
 </body>
 </html>
